--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
 
         <div class="nav">
-            <a href="#" onclick="workInPogress ();">Bio</a>
+            <a href="#wip" onclick="workInPogress ();">Bio</a>
             <a href="Gallery/gallery.html" >Gallery</a>
             <a href="#" onclick="workInPogress ();" >Contact</a>
-            <a href="#" onclick="workInPogress ();">Blog</a>
+            <a href="#wip" onclick="workInPogress ();">Blog</a>
         </div>
 
 
