--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="nav">
             <a href="#wip" onclick="workInPogress ();">Bio</a>
             <a href="Gallery/gallery.html" >Gallery</a>
-            <a href="#" onclick="workInPogress ();" >Contact</a>
+            <a href=".sqheadname" onclick="workInPogress ();" >Contact</a>
             <a href="#wip" onclick="workInPogress ();">Blog</a>
         </div>
 
