--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="navigationbar">
-            <div><a href="\Users\YUZARSIF\Coding\Projects\Web Design\index.html">Home</a></div>
+            <div><a href="../index.html"">Home</a></div>
             <div><a href="#">Blog</a></div>
             <div><a href="#">Contact</a></div>
         </div>
