--- a/pages/creatineblog.html
+++ b/pages/creatineblog.html
@@ -227,7 +227,7 @@
 
             <div>
                 <label for="comments">Comments</label><br>
-                <textarea type="text" rows="10" cols="100" id="comments"></textarea>
+                <textarea type="text" style="font-size: 1.5em;" id="comments"></textarea>
             </div>
 
         </div>
