--- a/pages/creatineblog.html
+++ b/pages/creatineblog.html
@@ -227,7 +227,8 @@
 
             <div>
                 <label for="comments">Comments</label><br>
-                <textarea type="text" style="font-size: 1.5em;" id="comments"></textarea>
+                <textarea type="text" style="font-size: 1.5em;" id="comments"></textarea><br>
+                <button id="buttt" onclick="buttonShadow();">Submit</button>
             </div>
 
         </div>
