--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="butt">
                 <button onclick="hireMeCv ();" >Hire Me</button>
-                <button href="#sqheadname" onclick="contactMe ();">Contact Me</button>
+                <button onclick="contactMe ();"><a class="contactmebutt" href="#sqheadname">Contact Me</a> </button>
                 <div ><marquee id="wip" direction="right"></marquee></marquee></div>
             </div>
         </div>
