--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
         <div class="nav">
-            <a href="#wip" onclick="workInPogress ();">Bio</a>
+            <a href="pages/bio.html">Bio</a>
             <a href="pages/gallery.html" >Gallery</a>
             <a href="#" onclick="workInPogress ();" >Contact</a>
             <a href="pages/blog.html" >Blog</a>
